[gd_scene load_steps=3 format=3 uid="uid://uit31ljlnh55"]

[ext_resource type="Script" uid="uid://bmx3ni7hjuac8" path="res://main.gd" id="1_ig7tw"]

[sub_resource type="FontFile" id="FontFile_ig7tw"]
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="DateButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 250.0
offset_right = 885.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 23
text = "ok"

[node name="NameButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 250.0
offset_right = 885.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 23
text = "ok"

[node name="ProfileButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1000.0
offset_top = 250.0
offset_right = 1085.0
offset_bottom = 335.0

[node name="DateLineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 400.0
offset_top = 250.0
offset_right = 750.0
offset_bottom = 335.0
alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 400.0
offset_top = 250.0
offset_right = 750.0
offset_bottom = 335.0

[node name="NameLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 400.0
offset_top = 180.0
offset_right = 750.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 23
text = "Введите Ф И О"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 400.0
offset_top = 180.0
offset_right = 750.0
offset_bottom = 240.0
theme_override_fonts/font = SubResource("FontFile_ig7tw")
theme_override_font_sizes/font_size = 23
text = "Введите дату рождения"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 150.0
offset_top = 350.0
offset_right = 1000.0
offset_bottom = 550.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]
